syntax = "proto3";

option csharp_namespace = "BillingService.API.Protos";

package appointment;

// Appointment gRPC Service (Client)
service AppointmentGrpcService {
    rpc GetAppointment (GetAppointmentRequest) returns (AppointmentResponse);
    rpc GetAppointmentsByPatient (GetAppointmentsByPatientRequest) returns (AppointmentsResponse);
}

// Request Messages
message GetAppointmentRequest {
    int32 appointment_id = 1;
}

message GetAppointmentsByPatientRequest {
    int32 patient_id = 1;
}

// Response Messages
message AppointmentResponse {
    bool success = 1;
    string message = 2;
    optional AppointmentDto appointment = 3;
}

message AppointmentsResponse {
    bool success = 1;
    string message = 2;
    repeated AppointmentDto appointments = 3;
}

// Data Transfer Objects
message AppointmentDto {
    int32 id = 1;
    int32 patient_id = 2;
    int32 doctor_id = 3;
    string date = 4;
    string status = 5;
    string patient_name = 6;
    string doctor_name = 7;
    string doctor_specialty = 8;
}
